@@ -3,6 +3,7 @@ using System.Collections.Generic;
 using System.Linq;
 using System.Linq.Expressions;
 using LightBDD.Framework.Expectations;
+using LightBDD.Framework.Implementation;
 
 namespace LightBDD.Framework.Parameters.Implementation
 {
