@@ -1,10 +1,10 @@
-﻿using System;
-using System.Linq;
-using System.Threading.Tasks;
-using LightBDD.Core.Results;
+﻿using LightBDD.Core.Results;
 using LightBDD.Framework;
 using LightBDD.Framework.Scenarios;
 using NUnit.Framework;
+using System;
+using System.Linq;
+using System.Threading.Tasks;
 
 namespace LightBDD.NUnit3.UnitTests
 {
@@ -98,22 +98,31 @@ namespace LightBDD.NUnit3.UnitTests
         [Scenario]
         public void Runner_should_support_async_void_scenarios()
         {
-            var finished = false;
-            Action step1 = async () =>
+            var scenario = new AsyncScenario();
+
+            Assert.DoesNotThrowAsync(() => Runner
+                .AddSteps(
+                    scenario.Async_void_step,
+                    scenario.Assert_finished)
+                .RunAsync());
+        }
+
+        class AsyncScenario
+        {
+            private bool _finished;
+
+            public async void Async_void_step()
             {
                 await Task.Delay(200);
-                finished = true;
-            };
-            Action step2 = () => Assert.IsTrue(finished);
-
-            Assert.DoesNotThrowAsync(() => Runner.AddSteps(step1, step2).RunAsync());
+                _finished = true;
+            }
+            public void Assert_finished() => Assert.IsTrue(_finished);
         }
 
         [Scenario]
         public void Runner_should_not_support_async_void_scenarios_if_executed_in_sync_mode()
         {
-            Action step = async () => await Task.Delay(200);
-            var ex = Assert.Throws<InvalidOperationException>(() => Runner.RunScenario(step));
+            var ex = Assert.Throws<InvalidOperationException>(() => Runner.RunScenario(Async_void_step));
             Assert.AreEqual(
                     "Only steps being completed upon return can be run synchronously (all steps have to return completed task). Consider using Async scenario methods for async Task or async void steps.",
                     ex.Message);
@@ -187,5 +196,7 @@ namespace LightBDD.NUnit3.UnitTests
                 .GetScenarios()
                 .Single(s => s.Info.Labels.Contains(scenarioId));
         }
+
+        private async void Async_void_step() => await Task.Delay(200);
     }
 }
